Changed LinkedLists to Lists then ArrayLists
Removed Globals.java
Changed color for HUD hp bar
Added walking animations to the Player (need to add "standing"
animations)