@@ -2,6 +2,7 @@ package graphics;
 
 import java.awt.image.BufferedImage;
 import java.util.LinkedList;
+import java.util.List;
 
 import utilities.Console;
 import utilities.Console.in;
@@ -9,7 +10,7 @@ import utilities.Images;
 import utilities.Images.EXT;
 
 public class Animation {
-	LinkedList<String> images = new LinkedList<String>();
+	List<String> images = new LinkedList<String>();
 	int index = 0;
 	double last_frame_t, duration;
 	boolean loop;
@@ -19,7 +20,7 @@ public class Animation {
 		this.loop = loop;
 	}
 
-	public void setImages(LinkedList<String> input) {
+	public void setImages(List<String> input) {
 		images = input;
 	}
 
@@ -30,19 +31,20 @@ public class Animation {
 
 	public BufferedImage getNext() {
 		if (images.size() == 1) {
-			return Images.get(images.getFirst());
+			return Images.get(images.get(0));
 		}
-		if (System.nanoTime() / 1000 > duration + last_frame_t) {
+		if (System.currentTimeMillis() > duration + last_frame_t) {
 			index++;
-			last_frame_t = System.nanoTime() / 1000;
+			last_frame_t = System.currentTimeMillis();
 		}
 		if (index >= images.size()) {
 			if(loop){
-				index = 1;
+				index = 0;
 			}else{
 				index = images.size()-1;
 			}
 		}
+		Console.log("index: " + index, in.INFO);
 		return Images.get(images.get(index));
 	}
 
